--- a/style_m.css
+++ b/style_m.css
@@ -32,24 +32,28 @@ nav ul, .mobile-menu-list {
     list-style-type: none;
     padding: 0;
     margin: 0;
+  
 }
 
 nav ul li, .mobile-menu-list li {
     display: inline;
     margin-right: 20px;
+   
 }
 
 nav ul li a, .mobile-menu-list li a {
     color: #000; /* Set the color to black */
     text-decoration: none;
     font-size: 22px;
-    font-weight: bold
+    font-weight: bold;
+
 }
 
 main {
     padding: 20px;
     max-width: 600px; /* Set a maximum width for the main content */
     margin: 0 auto;
+    margin-top: 0px
 }
 
 footer {
@@ -79,8 +83,8 @@ footer {
 
 @media (max-width: 768px) {
      header {
-        background-image: url('pictures/main_bkg.png'); /* Set the background image */
-        background-color: #333; /* Fallback color */
+        background-image: url('pictures/lightgreen.jpg'); /* Set the background image */
+        background-color: lightgreen; /* Fallback color */
     }
     .menu {
         display: none;
