--- a/style.css
+++ b/style.css
@@ -81,11 +81,19 @@ footer {
     padding: 10px;
 }
 
+h1{
+margin-bottom:1px
+
+}
+
 @media (max-width: 768px) {
-     header {
+     nav {
         background-image: url('pictures/lightgreen.jpg'); /* Set the background image */
-        background-color: lightgreen; /* Fallback color */
-    }
+  
+     }
+
+
+     
     .menu {
         display: none;
     }
