--- a/style_test.css
+++ b/style_test.css
@@ -1,4 +1,110 @@
-    .menu-title {
-        margin-right: auto; /* Pushes 目錄 to the far left */
-        margin-left: 10px; /* Adjust margin as needed */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-image: url('pictures/lightgreen.jpg');
+    background-size: cover;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Adjusted to center items horizontally */
+    padding: 10px;
+ /*   max-width: 768px*/
+}
+
+
+
+.text-right {
+            text-align: right;
+        }
+/* Removed the .logo styles */
+
+header {
+    background-image: url('pictures/lightgreen.jpg'); /* Apply the same background image */
+    background-color: #333; /* Fallback color */
+    color: #000;
+}
+}
+
+nav ul, .mobile-menu-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  
+}
+
+nav ul li, .mobile-menu-list li {
+    display: inline;
+    margin-right: 20px;
+   
+}
+
+nav ul li a, .mobile-menu-list li a {
+    color: #000; /* Set the color to black */
+    text-decoration: none;
+    font-size: 22px;
+    font-weight: bold;
+
+}
+
+main {
+    padding: 20px;
+    max-width: 600px; /* Set a maximum width for the main content */
+    margin: 0 auto;
+    margin-top: 0px
+}
+
+footer {
+    /* Removed the footer styles */
+}
+
+/* Mobile menu styles */
+.mobile-menu {
+    display: none;
+}
+
+.menu-icon {
+    width: 30px;
+    height: 30px;
+    /*    background-color: lightgreen;*/
+    background-image: url('pictures/lightgreen.jpg')
+    cursor: pointer;
+}
+
+.mobile-menu-list {
+    display: none;
+/*    background-color: lightgreen;*/
+    background-image: url('pictures/lightgreen.jpg')
+}
+
+.mobile-menu-list li {
+    padding: 10px;
+}
+
+nav{
+    height: 30px;
+
+}
+
+@media (max-width: 768px) {
+     nav {
+        background-image: url('pictures/lightgreen.jpg'); /* Set the background image */
+  
+     }
+
+
+     
+    .menu {
+        display: none;
     }
+
+    .mobile-menu {
+        display: block;
+    }
+
+    .mobile-menu-list {
+        display: block;
+    }
+}
