--- a/style_test.css
+++ b/style_test.css
@@ -9,46 +9,51 @@ body {
 .container {
     display: flex;
     align-items: center;
-    justify-content: space-between; /* Adjusted to evenly space items horizontally */
+    justify-content: center; /* Adjusted to center items horizontally */
     padding: 10px;
+ /*   max-width: 768px*/
 }
 
+
+
 .text-right {
-    text-align: right;
-}
+            text-align: right;
+        }
+/* Removed the .logo styles */
 
 header {
     background-image: url('pictures/lightgreen.jpg'); /* Apply the same background image */
     background-color: #333; /* Fallback color */
     color: #000;
 }
+}
 
-nav ul,
-.mobile-menu-list {
+nav ul, .mobile-menu-list {
     list-style-type: none;
     padding: 0;
     margin: 0;
+  
 }
 
-nav ul li,
-.mobile-menu-list li {
+nav ul li, .mobile-menu-list li {
     display: inline;
     margin-right: 20px;
+   
 }
 
-nav ul li a,
-.mobile-menu-list li a {
+nav ul li a, .mobile-menu-list li a {
     color: #000; /* Set the color to black */
     text-decoration: none;
     font-size: 22px;
     font-weight: bold;
+
 }
 
 main {
     padding: 20px;
     max-width: 600px; /* Set a maximum width for the main content */
     margin: 0 auto;
-    margin-top: 0px;
+    margin-top: 0px
 }
 
 footer {
@@ -63,34 +68,36 @@ footer {
 .menu-icon {
     width: 30px;
     height: 30px;
+    /*    background-color: lightgreen;*/
+    background-image: url('pictures/lightgreen.jpg')
     cursor: pointer;
-    background-image: url('pictures/lightgreen.jpg');
-    margin-right: 10px; /* Adjust margin for better positioning */
 }
 
 .mobile-menu-list {
     display: none;
-    background-image: url('pictures/lightgreen.jpg');
-    position: fixed;
-    top: 30px; /* Adjust top positioning */
-    right: 10px; /* Adjust right positioning */
-    bottom: 0;
-    width: 60%; /* Adjust width as needed */
-    padding: 20px;
-    border-right: 1px solid #ccc;
-    z-index: 1000;
-    flex-direction: column;
-    transition: width 2s;
+/*    background-color: lightgreen;*/
+    background-image: url('pictures/lightgreen.jpg')
 }
 
 .mobile-menu-list li {
-    display: block;
-    margin-bottom: 10px; /* Adjust spacing between items */
+    padding: 10px;
+}
+
+nav{
+    height: 30px;
+
 }
 
 @media only screen and (max-width: 768px) {
-    .menu-icon {
-        display: inline-block;
+     nav {
+        background-image: url('pictures/lightgreen.jpg'); /* Set the background image */
+  
+     }
+
+
+     
+    .menu {
+        display: none;
     }
 
     .mobile-menu {
