--- a/style_test.css
+++ b/style_test.css
@@ -88,7 +88,7 @@ nav{
 
 }
 
-@media only screen and (max-width: 768px) {
+@media (max-width: 768px) {
      nav {
         background-image: url('pictures/lightgreen.jpg'); /* Set the background image */
   
